Fix extra space under pseudo-element in current-page

--- a/css/style.css
+++ b/css/style.css
@@ -823,11 +823,8 @@ main {
         gap: 40px;
     }
     
-    .nav-item {
-        padding: 24px 0;
-    }
-    
     .nav-link {
+        display: block;
         padding: 24px 0;
         font-weight: 500;
         font-size: 16px;
